fix: Edit button clickable, Alignment of Organisation Name and Add credential,Overview' title to be below as existing dashboard, Font size to match with existing dashboard, n iPad resolution , fix responsive issues

--- a/src/container/Home/style.scss
+++ b/src/container/Home/style.scss
@@ -71,7 +71,7 @@
 }
 
 .footerContainer {
-    margin-top: 120px;
+    margin-top: 60px;
     padding: 1.563rem;
     span {
     font-size: 0.85rem;
